--- a/style.css
+++ b/style.css
@@ -55,9 +55,9 @@ h1 {
   background: #fff; 
   font-size: 2rem; 
 } 
-
+w
 #entrada-de-texto::placeholder { 
-  color: #828282; 
+  color: #108c91; 
   font-size: 2rem; 
   font-weight: 400; 
   line-height: normal; 
@@ -72,7 +72,7 @@ h1 {
   border-radius: 0.5rem; 
   border: none; 
   background: var(--cor-destaque); 
-  color: #000; 
+  color: #d8eff0; 
   font-size: 2.5rem; 
   font-weight: 500; 
   line-height: normal; 
