--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ h1 {
 } 
 w
 #entrada-de-texto::placeholder { 
-  color: #d9f1f1; 
+  color: #2c8d8d; 
   font-size: 2rem; 
   font-weight: 400; 
   line-height: normal; 
@@ -72,7 +72,7 @@ w
   border-radius: 0.5rem; 
   border: none; 
   background: var(--cor-destaque); 
-  color: #159aa1; 
+  color: hsl(183, 77%, 36%); 
   font-size: 2.5rem; 
   font-weight: 500; 
   line-height: normal; 
